Use of view
