# design/type.go
@@ -2,6 +2,52 @@ package design
 
 import . "goa.design/goa/v3/dsl"
 
+// var Resources = CollectionOf(Resource, func() {
+// 	View("extended")
+// })
+
+// Resource defines return type for all apis
+var Resource = ResultType("application/vnd.hub.resource", func() {
+	TypeName("Resource")
+	Attributes(func() {
+
+		Attribute("id", UInt, "ID is the unique id of the resource", func() {
+			Example("id", 1)
+		})
+		Attribute("name", String, "Name of the resource", func() {
+			Example("name", "golang")
+		})
+
+		Attribute("type", String, "Type of resource", func() {
+			Example("type", "task")
+		})
+
+		Attribute("rating", UInt, "Rating of resource", func() {
+			Example("rating", 5)
+		})
+
+	})
+	View("extended", func() {
+		Attribute("id")
+		Attribute("name")
+	})
+
+	View("desc", func() {
+		Attribute("id")
+		Attribute("name")
+		Attribute("rating")
+	})
+
+	View("default", func() {
+		Attribute("id")
+		Attribute("name")
+		Attribute("type")
+		Attribute("rating")
+	})
+	Required("id", "name", "type", "rating")
+
+})
+
 var User = ResultType("application/vnd.goa-crud.stored-user", func() {
 	Description("A User describes a user retrieved by the storage service.")
 	TypeName("User")
